[workspace]
resolver = "2"
members = [
    "boreal",
    "boreal-cli",
    "boreal-parser",
    "boreal-test-helpers",
]

[workspace.lints.rust]
ambiguous_negative_literals = "deny"
explicit_outlives_requirements = "deny"
let_underscore_drop = "deny"
macro_use_extern_crate = "deny"
missing_abi = "deny"
missing_docs = "deny"
missing_unsafe_on_extern = "deny"
non_ascii_idents = "deny"
# This cannot really be enabled because of some functions that are in the prelude
# now, but weren't at the MSRV version.
# redundant_imports = "deny"
redundant_lifetimes = "deny"
single_use_lifetimes = "deny"
# tail_expr_drop_order = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unit_bindings = "deny"
# unnameable_types = "deny"
# unreachable_pub = "deny"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }
unsafe_attr_outside_unsafe = "deny"
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "deny"
unused_crate_dependencies = "deny"
unused_extern_crates = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_macro_rules = "deny"
unused_qualifications = "deny"
unused_results = "deny"
variant_size_differences = "deny"

# edition 2024 lints
deprecated_safe_2024 = "deny"
# edition_2024_expr_fragment_specifier = "deny"
# if_let_rescope = "deny"
impl_trait_overcaptures = "deny"
keyword_idents_2024 = "deny"
rust_2024_guarded_string_incompatible_syntax = "deny"
rust_2024_incompatible_pat = "deny"
rust_2024_prelude_collisions = "deny"

# unstable
# fuzzy_provenance_casts = "deny"
# lossy_provenance_casts = "deny"
# must_not_suspend = "deny"
# non_exhaustive_omitted_patterns = "deny"
# unqualified_local_imports = "deny"

[workspace.lints.clippy]
# groups
all = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }

# extras
undocumented_unsafe_blocks = "deny"

# exclusions, mostly from the pedantic group
inline_always = "allow"
match_same_arms = "allow"
module_name_repetitions = "allow"
# Handled by cargo-allow
multiple_crate_versions = "allow"
struct_excessive_bools = "allow"
struct_field_names = "allow"
single_match_else = "allow"
too_many_lines = "allow"
unnested_or_patterns = "allow"
