[package]
publish = false
name = "boreal-benches"
version = "0.0.1"
description = "Benchmarks for the boreal library"
repository = "https://github.com/vthib/boreal"
license = "MIT OR Apache-2.0"
edition = "2021"

[dev-dependencies]
boreal = { path = "../boreal", version = "*", features = ["authenticode"] }
criterion = "0.5"
glob = "0.3.1"
walkdir = "2.3"
yara = { version = "0.19", features = ["vendored"] }

[[bench]]
name = "boreal"
harness = false
path = "src/bench.rs"

[lib]
bench = false

# Keep it outside the boreal workspace, criterion is too
# chunky, I don't want it polluting by Cargo.lock
[workspace]
