[package]
publish = false
name = "boreal-benches"
version = "0.0.1"
description = "Benchmarks for the boreal library"
repository = "https://github.com/vthib/boreal"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
boreal = { path = "../boreal", version = "*", features = ["authenticode"] }
criterion = "0.5"
glob = "0.3.1"
walkdir = "2.3"
yara = { version = "0.30", features = ["vendored"] }
yara-x = "0.14"

[features]
serialize = ["boreal/serialize"]

[[bench]]
name = "boreal"
harness = false
path = "src/bench.rs"

[lib]
bench = false

[[bin]]
name = "serialized-size"
path = "src/serialized_size.rs"

[[bin]]
name = "compiled-size"
path = "src/compiled_size.rs"

[profile.release-with-debug]
inherits = "release"
debug = true

# Keep it outside the boreal workspace, criterion and yara-x are way too
# chunky, I don't want it polluting the Cargo.lock
[workspace]
