[package]
name = "boreal-cli"
version = "0.4.0"
description = "CLI utility to run boreal, a YARA rules engine"
repository = "https://github.com/vthib/boreal"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["boreal", "yara", "string-matching", "scan"]
categories = ["command-line-utilities", "text-processing"]
edition = "2021"

[[bin]]
name = "boreal"
path = "src/main.rs"

[features]
default = ["authenticode", "memmap", "profiling"]

# Enable authenticode parsing in boreal, requires OpenSSL
authenticode = ["boreal/authenticode"]
# Enable use of memory maps to load files to scan.
memmap = ["boreal/memmap"]
# Enables scan statistics. Should not impact performances
# significantly, and very useful in a CLI tool to debug rules.
profiling = ["boreal/profiling"]

[dependencies]
boreal = { path = "../boreal", version = "0.4.0" }

# CLI arguments handling
clap = { version = "4.3", features = ["cargo"] }

# Proper error reporting on parsing
codespan-reporting = "0.11"

# Parallel evaluation on scanned directories
crossbeam-channel = "0.5"

# Display of bytes values
hex = "0.4"

# Walking through directories
walkdir = "2.4"

[dev-dependencies]
# Testing for the CLI
assert_cmd = "2.0"
tempfile = "3.8"
predicates = { version = "3.0", default-features = false, features = ["regex"] }
