[package]
name = "boreal-parser"
version = "0.0.1"
repository = "https://github.com/vthib/boreal"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
# Parsing .yar files
nom = "7.1"

# packing multiple flags together
bitflags = "1.3"

# Proper error reporting on parsing
codespan-reporting = "0.11"
