[package]
name = "boreal-parser"
version = "0.1.0"
description = "A parser library for YARA files, intended for use with the boreal library"
repository = "https://github.com/vthib/boreal"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["boreal", "yara", "parser"]
categories = ["parser-implementations"]
edition = "2021"

[dependencies]
# Parsing library
nom = "7.1"

# packing multiple flags together
bitflags = "1.3"

# Proper error reporting on parsing
codespan-reporting = "0.11"
