[package]
name = "boreal-py"
version = "1.0.0"
description = "Python bindings to the boreal YARA scanner"
repository = "https://github.com/vthib/boreal"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["boreal", "yara", "string-matching", "scan", "python"]
categories = ["api-bindings", "text-processing"]
edition = "2021"
# MSRV
rust-version = "1.66"

homepage = "https://github.com/vthib/boreal/"
documentation = "https://vthib.github.io/boreal/boreal-py/dev/yara_compatibility_mode/"

[lib]
name = "boreal"
crate-type = ["cdylib"]

[features]
default = ["serialize", "authenticode-verify"]

cuckoo = ["boreal/cuckoo"]

serialize = ["boreal/serialize"]

authenticode-verify = ["boreal/authenticode-verify"]

[dependencies]
boreal = { path = "../boreal", version = "1.0.0", features = ["memmap"] }

parking_lot = "0.12"
pyo3 = { version = "0.27", features = ["abi3", "abi3-py311", "extension-module", "macros"] }

[lints]
workspace = true
