[project]
name = "boreal-python"
version = "1.1.0"
readme = "README.md"
description = "Python bindings to the boreal YARA scanner"
requires-python = ">=3.11"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-run-parallel>=0.8.2",
    "yara-python>=4.5.4",
]
doc = [
    "mike>=2.1.3",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=1.0.3",
    "ruff>=0.15.0",
]

[tool.uv]
[[tool.uv.cache-keys]]
file = "pyproject.toml"
[[tool.uv.cache-keys]]
file = "Cargo.toml"
[[tool.uv.cache-keys]]
file = "boreal.pyi"
[[tool.uv.cache-keys]]
file = "src/**/*"

[tool.pytest]
strict = true
addopts = [
    "--import-mode=importlib",
]
markers = [
    "global_config: tests that uses global config parameters",
]
