[package]
name = "boreal"
version = "0.4.0"
description = "A library to evaluate YARA rules, used to scan bytes for textual and binary pattern"
repository = "https://github.com/vthib/boreal"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["boreal", "yara", "string-matching", "scan"]
categories = ["text-processing"]
edition = "2021"
# MSRV
rust-version = "1.65"
exclude = ["/tests"]

[features]
default = ["hash", "object", "memmap", "process"]

# Enables the "hash" module.
hash = ["md-5", "sha1", "sha2", "hex", "crc32fast", "tlsh2"]

# Enables the "pe", "elf" and "macho" modules.
#
# The "pe" module is missing signatures details unless the `authenticode` feature
# is enabled.
object = ["dep:object"]

# Enables the "pe.signatures" module field.
# The `object` feature must also be enabled to get access to the "pe" module.
authenticode = ["dep:authenticode-parser"]

# Adds an API to scan files using memory maps.
memmap = ["dep:memmap2"]

# Adds APIs to scan process memories.
process = ["dep:libc", "dep:windows", "dep:mach2"]

# Enables computation of statistics during scanning.
profiling = []

[dependencies]
boreal-parser = { path = "../boreal-parser", version = "0.4.0" }

# Proper error reporting on compilation
codespan-reporting = "0.11"

# Scanning for bytes
aho-corasick = "1.0"
memchr = "2.5"
# Remove unicode feature
regex-automata = { version = "0.4", default-features = false, features = ["std", "syntax", "perf", "meta", "nfa", "dfa", "hybrid"] }
# No default features to disable unicode, we do not need it
regex-syntax = { version = "0.8", default-features = false }

# Bitmap used during compilation of strings
bitmaps = "3.2"

# "hash" feature
crc32fast = { version = "1.3", optional = true }
hex = { version = "0.4", optional = true }
md-5 = { version = "0.10", optional = true }
sha1 = { version = "0.10", optional = true }
sha2 = { version = "0.10", optional = true }
tlsh2 = { version = "0.3", optional = true }

# "object" feature
object = { version = "0.32", optional = true, default-features = false, features = ["read"] }

# "authenticode" feature
authenticode-parser = { version = "0.5", optional = true }

# "memmap" feature
memmap2 = { version = "0.9", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
libc = { version = "0.2", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
libc = { version = "0.2", optional = true }
mach2 = { version = "0.4", optional = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", optional = true, features = [
    "Win32_Foundation",
    # LookupPrivilegeValue, AdjustTokenPrivileges
    "Win32_Security",
    # ReadProcessMemory
    "Win32_System_Diagnostics_Debug",
    # VirtualQueryEx
    "Win32_System_Memory",
    # GetCurrentProcess, OpenProcess, OpenProcessToken,
    "Win32_System_Threading",
] }

[dev-dependencies]
base64 = "0.21"
glob = "0.3.1"
tempfile = "3.9"
yara = { version = "0.26", features = ["vendored"] }

[package.metadata.docs.rs]
features = ["authenticode", "memmap"]
